feat: add authentication
- Support keycloak as auth provider
- Add no auth
